# sysrepo-snabb-plugin

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cfg_parse/: README.dox  cfg_parse.c  cfg_parse.h  config.ini
docker/: Dockerfile  Dockerfile.devel  README.md
docker/scripts/: lwaftr.sh
docker/systemd/: sysrepod.service
src/: cfg.c  cfg.h  common.h  config.h.in  libyang.c  libyang.h  parse.c  parse.h  snabb.c  snabb.h  thpool.c  thpool.h  transform.c  transform.h  version.h.in  xpath.c  xpath.h
systemd/: sysrepo-snabb-plugin.service
test/: run  run.c  xpath.c
tests/: README.md  netconf.go
tests/config/: ietf-interfaces.toml  snabb-softwire-v1.toml  snabb-softwire-v2.toml
tests/robot-tests/: README.md  requirements.txt  setup.sh
tests/robot-tests/config/: lwaftr-start.conf
tests/robot-tests/src/: Main.robot  PluginInit.resource
